[gd_scene load_steps=9 format=3 uid="uid://hkxabhm25vqy"]

[ext_resource type="Script" uid="uid://dihrb5salugh7" path="res://shop.gd" id="1_5teyl"]
[ext_resource type="Texture2D" uid="uid://dwod6hsbon7v7" path="res://sprites/Shop.png" id="2_8kdgp"]
[ext_resource type="Texture2D" uid="uid://dt26pdgxwufy3" path="res://sprites/grenade.png" id="2_e7rdd"]
[ext_resource type="Texture2D" uid="uid://daj2wgn5qo2nf" path="res://sprites/bomb_scaled_18x_pngcrushed.png" id="3_gmb2m"]
[ext_resource type="Texture2D" uid="uid://ra8wmf3mjk63" path="res://sprites/pixil-layer-Background (2).png" id="3_myf4l"]
[ext_resource type="Texture2D" uid="uid://bkl8fk5g5ict4" path="res://sprites/nuke.png" id="4_8kdgp"]
[ext_resource type="Texture2D" uid="uid://dddcy5hnwqwir" path="res://sprites/potion.png" id="5_myf4l"]
[ext_resource type="Texture2D" uid="uid://dhfgerrei3enw" path="res://sprites/fullheal_scaled_18x_pngcrushed.png" id="6_p5a0g"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_5teyl")

[node name="Instructions" type="Sprite2D" parent="."]
position = Vector2(1053.11, 593.5)
scale = Vector2(1.09907, 1.09907)
texture = ExtResource("2_8kdgp")

[node name="Pixil-layer-background(2)2" type="Sprite2D" parent="."]
position = Vector2(1852, 335)
scale = Vector2(0.800005, 0.159998)
texture = ExtResource("3_myf4l")

[node name="Pixil-layer-background(2)" type="Sprite2D" parent="."]
position = Vector2(-61, 317)
scale = Vector2(8.04, 1)
texture = ExtResource("3_myf4l")

[node name="Pixil-layer-background(2)" type="Sprite2D" parent="Pixil-layer-background(2)"]
position = Vector2(-20.0249, 375)
scale = Vector2(1.75497, 0.439999)
texture = ExtResource("3_myf4l")

[node name="Pixil-layer-background(2)" type="Sprite2D" parent="Pixil-layer-background(2)/Pixil-layer-background(2)"]
position = Vector2(61.8005, 461.365)
scale = Vector2(0.249902, 0.60133)
texture = ExtResource("3_myf4l")

[node name="money" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="grenadebuy" type="Button" parent="."]
offset_left = 200.0
offset_top = 325.0
offset_right = 240.0
offset_bottom = 356.0
text = "BUY"

[node name="grenadeprice" type="Label" parent="."]
offset_left = 205.0
offset_top = 355.0
offset_right = 245.0
offset_bottom = 378.0
text = "$40"

[node name="grenadesell" type="Button" parent="."]
offset_left = 150.0
offset_top = 325.0
offset_right = 194.0
offset_bottom = 356.0
text = "SELL"

[node name="grenadesaleprice" type="Label" parent="."]
offset_left = 157.0
offset_top = 355.0
offset_right = 197.0
offset_bottom = 378.0
text = "$20"

[node name="bombbuy2" type="Button" parent="."]
offset_left = 400.0
offset_top = 325.0
offset_right = 440.0
offset_bottom = 356.0
text = "BUY"

[node name="bombprice2" type="Label" parent="."]
offset_left = 400.0
offset_top = 355.0
offset_right = 440.0
offset_bottom = 378.0
text = "$100
"

[node name="bombsell2" type="Button" parent="."]
offset_left = 350.0
offset_top = 325.0
offset_right = 394.0
offset_bottom = 356.0
text = "SELL"

[node name="bombsaleprice2" type="Label" parent="."]
offset_left = 357.0
offset_top = 355.0
offset_right = 397.0
offset_bottom = 378.0
text = "$50"

[node name="nukebuy3" type="Button" parent="."]
offset_left = 600.0
offset_top = 325.0
offset_right = 640.0
offset_bottom = 356.0
text = "BUY"

[node name="nukeprice3" type="Label" parent="."]
offset_left = 600.0
offset_top = 355.0
offset_right = 640.0
offset_bottom = 378.0
text = "$200"

[node name="nukesell3" type="Button" parent="."]
offset_left = 550.0
offset_top = 325.0
offset_right = 594.0
offset_bottom = 356.0
text = "SELL"

[node name="nukesaleprice3" type="Label" parent="."]
offset_left = 553.0
offset_top = 355.0
offset_right = 593.0
offset_bottom = 378.0
text = "$100"

[node name="potionbuy4" type="Button" parent="."]
offset_left = 800.0
offset_top = 325.0
offset_right = 840.0
offset_bottom = 356.0
text = "BUY"

[node name="potionprice4" type="Label" parent="."]
offset_left = 805.0
offset_top = 355.0
offset_right = 845.0
offset_bottom = 378.0
text = "$40"

[node name="potionsell4" type="Button" parent="."]
offset_left = 750.0
offset_top = 325.0
offset_right = 794.0
offset_bottom = 356.0
text = "SELL"

[node name="potionsaleprice4" type="Label" parent="."]
offset_left = 757.0
offset_top = 355.0
offset_right = 797.0
offset_bottom = 378.0
text = "$20"

[node name="fullhealbuy5" type="Button" parent="."]
offset_left = 1000.0
offset_top = 325.0
offset_right = 1040.0
offset_bottom = 356.0
text = "BUY"

[node name="fullhealprice5" type="Label" parent="."]
offset_left = 1000.0
offset_top = 355.0
offset_right = 1040.0
offset_bottom = 378.0
text = "$300"

[node name="fullhealsell5" type="Button" parent="."]
offset_left = 950.0
offset_top = 325.0
offset_right = 994.0
offset_bottom = 356.0
text = "SELL"

[node name="fullhealsaleprice5" type="Label" parent="."]
offset_left = 953.0
offset_top = 355.0
offset_right = 993.0
offset_bottom = 378.0
text = "$150"

[node name="continue" type="Button" parent="."]
offset_left = 1872.0
offset_top = 316.0
offset_right = 1970.0
offset_bottom = 347.0
text = "NEXT LEVEL"

[node name="g" type="Label" parent="."]
offset_left = 150.0
offset_top = 300.0
offset_right = 190.0
offset_bottom = 323.0

[node name="b" type="Label" parent="."]
offset_left = 360.0
offset_top = 300.0
offset_right = 400.0
offset_bottom = 323.0

[node name="n" type="Label" parent="."]
offset_left = 561.0
offset_top = 300.0
offset_right = 601.0
offset_bottom = 323.0

[node name="p" type="Label" parent="."]
offset_left = 757.0
offset_top = 300.0
offset_right = 797.0
offset_bottom = 323.0

[node name="f" type="Label" parent="."]
offset_left = 950.0
offset_top = 300.0
offset_right = 990.0
offset_bottom = 323.0

[node name="hp" type="Label" parent="."]
offset_left = 40.0
offset_top = 600.0
offset_right = 80.0
offset_bottom = 623.0

[node name="atk" type="Label" parent="."]
offset_left = 640.0
offset_top = 600.0
offset_right = 680.0
offset_bottom = 623.0

[node name="sp" type="Label" parent="."]
offset_left = 340.0
offset_top = 600.0
offset_right = 380.0
offset_bottom = 623.0

[node name="def" type="Label" parent="."]
offset_left = 940.0
offset_top = 600.0
offset_right = 980.0
offset_bottom = 623.0

[node name="spd" type="Label" parent="."]
offset_left = 1240.0
offset_top = 600.0
offset_right = 1280.0
offset_bottom = 623.0

[node name="crit" type="Label" parent="."]
offset_left = 1540.0
offset_top = 600.0
offset_right = 1580.0
offset_bottom = 623.0

[node name="gamble" type="Label" parent="."]
offset_left = 740.0
offset_top = 845.0
offset_right = 780.0
offset_bottom = 868.0

[node name="ahp" type="Button" parent="."]
offset_left = 140.0
offset_top = 640.0
offset_right = 180.0
offset_bottom = 671.0
text = "BUY"

[node name="asp" type="Button" parent="."]
offset_left = 440.0
offset_top = 640.0
offset_right = 448.0
offset_bottom = 648.0
text = "BUY"

[node name="aatk" type="Button" parent="."]
offset_left = 750.0
offset_top = 640.0
offset_right = 790.0
offset_bottom = 671.0
text = "BUY"

[node name="adef" type="Button" parent="."]
offset_left = 1060.0
offset_top = 640.0
offset_right = 1100.0
offset_bottom = 671.0
text = "BUY"

[node name="aspd" type="Button" parent="."]
offset_left = 1350.0
offset_top = 640.0
offset_right = 1390.0
offset_bottom = 671.0
text = "BUY"

[node name="acrit" type="Button" parent="."]
offset_left = 1650.0
offset_top = 640.0
offset_right = 1690.0
offset_bottom = 671.0
text = "BUY"

[node name="agamble" type="Button" parent="."]
offset_left = 910.0
offset_top = 885.0
offset_right = 984.0
offset_bottom = 916.0
text = "GAMBLE"

[node name="Grenade" type="Sprite2D" parent="."]
position = Vector2(194, 300)
texture = ExtResource("2_e7rdd")

[node name="BombScaled18xPngcrushed" type="Sprite2D" parent="."]
position = Vector2(392, 275)
texture = ExtResource("3_gmb2m")

[node name="Nuke" type="Sprite2D" parent="."]
position = Vector2(602, 274)
texture = ExtResource("4_8kdgp")

[node name="Potion" type="Sprite2D" parent="."]
position = Vector2(792, 246)
texture = ExtResource("5_myf4l")

[node name="FullhealScaled18xPngcrushed" type="Sprite2D" parent="."]
position = Vector2(998, 205)
texture = ExtResource("6_p5a0g")

[connection signal="pressed" from="grenadebuy" to="." method="_on_grenadebuy_pressed"]
[connection signal="pressed" from="grenadesell" to="." method="_on_grenadesell_pressed"]
[connection signal="pressed" from="bombbuy2" to="." method="_on_bombbuy_2_pressed"]
[connection signal="pressed" from="bombsell2" to="." method="_on_bombsell_2_pressed"]
[connection signal="pressed" from="nukebuy3" to="." method="_on_nukebuy_3_pressed"]
[connection signal="pressed" from="nukesell3" to="." method="_on_nukesell_3_pressed"]
[connection signal="pressed" from="potionbuy4" to="." method="_on_potionbuy_4_pressed"]
[connection signal="pressed" from="potionsell4" to="." method="_on_potionsell_4_pressed"]
[connection signal="pressed" from="fullhealbuy5" to="." method="_on_fullhealbuy_5_pressed"]
[connection signal="pressed" from="fullhealsell5" to="." method="_on_fullhealsell_5_pressed"]
[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="ahp" to="." method="_on_ahp_pressed"]
[connection signal="pressed" from="asp" to="." method="_on_asp_pressed"]
[connection signal="pressed" from="aatk" to="." method="_on_aatk_pressed"]
[connection signal="pressed" from="adef" to="." method="_on_adef_pressed"]
[connection signal="pressed" from="aspd" to="." method="_on_aspd_pressed"]
[connection signal="pressed" from="acrit" to="." method="_on_acrit_pressed"]
[connection signal="pressed" from="agamble" to="." method="_on_agamble_pressed"]
